Bug#32554 - Enforce maximum key length based on page size.