storage/falcon/MySQLCollation.h
@@ -22,7 +22,7 @@
 // Entrypoints in the Falcon storage handler to collation handling
 
 extern int falcon_strnxfrm (void *cs, 
-							const char *dst, uint dstlen,
+							const char *dst, uint dstlen, int nweights,
 							const char *src, uint srclen);
 
 extern char falcon_get_pad_char (void *cs);
@@ -49,7 +49,7 @@ public:
 	~MySQLCollation(void);
 
 	virtual int			compare (Value *value1, Value *value2);
-	virtual int			makeKey (Value *value, IndexKey *key, int partialKey);
+	virtual int			makeKey (Value *value, IndexKey *key, int partialKey, int maxKeyLength);
 	virtual const char	*getName ();
 	virtual bool		starting (const char *string1, const char *string2);
 	virtual bool		like (const char *string, const char *pattern);
